<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="170dp"
    android:layout_height="280dp"
    android:focusable="false"
    android:padding="5dp"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:background="@color/white"
    android:elevation="35dp"
    android:id="@+id/linear"
    >

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/cart"

        />
    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tshirt"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/tvproductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rs 2000"
        android:layout_gravity="center"
        android:textStyle="normal"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        />


</LinearLayout>