...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="#FF5722"
        android:text="Add TO Cart"
        android:textColor="@color/white"
        />
...
